--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       if (pair === "xau") {
         lotSize = rawLot / 100;
       } else if (pair === "currency") {
-        lotSize = rawLot / 100000;
+        lotSize = rawLot / 1000000;
       } else {
         lotSize = rawLot / 1;
       }
